--- a/css/reset.css
+++ b/css/reset.css
@@ -1,3 +1,4 @@
+/* Définir la taille de base pour le rem */
 html {
     font-size: 62.5%; /* 1rem = 10px */
 }
@@ -9,25 +10,33 @@ body {
     line-height: 1.6;
     margin: 0;
     padding: 0;
-    color: #333;
+    color: #222;
     letter-spacing: 0.1rem;
     min-height: 100svh;
 }
-
 *{
     box-sizing: border-box;
 }
-
 a{
     text-decoration: none;
+    font-weight: normal;
+    color: #222;
 }
-
 h1, h2, h3, h4, h5, h6 {
     font-size: xx-large;
     margin: 0;
     font-weight: normal;
 }
 
-p, figure{
+p, figure, ol, ul, details summary{
+    padding: 0;
+    list-style: none;
     margin: 0;
+}
+details summary::-webkit-details-marker {
+    display: none;   /* Masque la flèche pour les navigateurs WebKit (comme Chrome et Safari) */
+    
+}
+details summary{
+    cursor: pointer;
 }
