--- a/css/main.css
+++ b/css/main.css
@@ -13,3 +13,18 @@ header{
         font-weight: bolder;
     }
 }
+.gallery-content{
+    max-width: 90.0rem;
+    margin: 5rem auto 2rem;
+    
+        .gallery-grid{
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        gap: 1rem;
+        }
+
+        .gallery-grid li img {
+            width: 100%;
+        }
+
+}
