--- a/css/reset.css
+++ b/css/reset.css
@@ -40,3 +40,9 @@ details summary::-webkit-details-marker {
 details summary{
     cursor: pointer;
 }
+
+img {
+    display: inline-block;
+    vertical-align: middle;
+    object-fit: cover;
+}
